--- a/index.ipynb
+++ b/index.ipynb
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-98-e3383b756d6a>, line 4)",
+     "evalue": "expected an indented block (<ipython-input-99-2ed708058e86>, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-98-e3383b756d6a>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if not restaurant['is_closed']:\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-99-2ed708058e86>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    new.append(restaurant)\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -300,7 +300,7 @@
     "def open_restaurants(restaurants):\n",
     "    new = []\n",
     "    for restaurant in restaurants:\n",
-    "    if not restaurant['is_closed']:\n",
+    "        if not restaurant['is_closed']:\n",
     "        \n",
     "        new.append(restaurant)\n",
     "        \n",
